--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 <head>
 
 	<title>Literary & Debating Society-GCT</title>
-<!--
 
-Template 2083 Steak House
-
-http://www.tooplate.com/view/2083-steak-house
-
--->
   	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -575,8 +569,8 @@ http://www.tooplate.com/view/2083-steak-house
       </div>  
 
       <div class="col-md-4 col-sm-4 text-right">
-        <!--<a href="#home" class="fa fa-angle-up smoothScroll gototop"></a>-->
-        Created by &nbsp;&nbsp;<a href="https://github.com/amrs-tech" target="_blank">Ahamed Musthafa</a>&nbsp;and&nbsp;<a href="http://plus.google.com/+DharunAnanth" target="_blank">Dharun</a>
+        <!--<a href="#home" class="fa fa-angle-up smoothScroll gototop"></a>
+        Created by &nbsp;&nbsp;<a href="https://github.com/amrs-tech" target="_blank">Ahamed Musthafa</a>-->
       </div>
 
     </div>
